<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/background"
    android:gravity="center">

    
    <TextView
        android:text="@string/quiz_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginBottom="14dp"/>
    
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="15dp"
        >
        
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="15dp">

            <TextView
                android:textSize="33sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            
            <TextView
                android:text="@string/please_enter_your_name"
                android:textSize="19sp"
                android:textStyle="normal"
                android:textColor="#4D5251"
                android:layout_marginTop="15dp"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_name"
                    android:hint="@string/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/button_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:textAllCaps="false"
                android:background="#9E0CF8"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginTop="8dp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>
        
    </androidx.cardview.widget.CardView>

</androidx.appcompat.widget.LinearLayoutCompat>